# tagging-resources-aws

./: .gitignore  README.md  __init__.py  pyproject.toml  setup.py  stdeb.cfg  tag_propagate.py
apt/: Packages  Release  tagging-resources-aws_0.1.1_all.deb  tagging-resources-aws_0.1.2_all.deb  tagging-resources-aws_0.1.3_all.deb  tagging-resources-aws_0.1.5_all.deb
apt/dists/stable/: Release
apt/dists/stable/main/binary-amd64/: Packages
apt/pool/main/t/tagging-resources-aws/: tagging-resources-aws_0.1.4_all.deb  tagging-resources-aws_0.1.5_all.deb  tagging-resources-aws_0.1.6_all.deb
bash_completion/: tagging
deb_dist/: python3-tagging-resources-aws_0.1.6-1_all.deb  tagging-resources-aws_0.1.6-1.debian.tar.xz  tagging-resources-aws_0.1.6-1.dsc  tagging-resources-aws_0.1.6-1_amd64.buildinfo  tagging-resources-aws_0.1.6-1_amd64.changes  tagging-resources-aws_0.1.6-1_source.buildinfo  tagging-resources-aws_0.1.6-1_source.changes
deb_dist/tagging-resources-aws-0.1.6/: PKG-INFO  README.md  pyproject.toml  setup.py
deb_dist/tagging-resources-aws-0.1.6/.pybuild/cpython3_3.12_tagging-resources-aws/: .pydistutils.cfg
deb_dist/tagging-resources-aws-0.1.6/bash_completion/: tagging
deb_dist/tagging-resources-aws-0.1.6/debian/: changelog  control  files  python3-tagging-resources-aws.postinst.debhelper  python3-tagging-resources-aws.prerm.debhelper  python3-tagging-resources-aws.substvars  rules
debian/: changelog  control  install
tagging_resources_aws.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+4 files in other folders)
