[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tagging-resources-aws"
version = "0.1.5"
description = "AWS Ultimate Tag Propagator – EC2 + EFS + FSx tagging with FinOps focus"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Jose Francisco Henriquez" }
]
dependencies = [
  "boto3>=1.34.0",
]

[tool.setuptools]
py-modules = ["tag_propagate"]

[project.scripts]
tagging = "tag_propagate:main"